--- a/dtmoney/package.json
+++ b/dtmoney/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -12,11 +13,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.21",
+    "axios": "^0.25.0",
+    "miragejs": "^0.1.43",
+    "polished": "^4.1.4",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2"
   },
