--- a/ignews/package.json
+++ b/ignews/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.5.0",
     "next": "12.0.10",
+    "next-auth": "^4.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stripe": "^8.201.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
