--- a/ignews/package.json
+++ b/ignews/package.json
@@ -12,10 +12,12 @@
     "@prismicio/client": "5.1.1",
     "@prismicio/react": "^2.0.6",
     "@stripe/stripe-js": "^1.22.0",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^0.25.0",
     "faunadb": "^4.5.0",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
